# divvy

./: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: commands.rs  error.rs  main.rs
flake-parts/: cargo.nix
