[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/justinrubek/divvy"
repository = "https://github.com/justinrubek/divvy"
authors = ["Justin Rubek"]

[workspace.dependencies]
anyhow = "1.0.68"
# reqwest = { version = "0.11.12", features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
tracing = "0.1.40"

[profile.release]
# opt-level = 2 # fast and small wasm
